# pybadges

./: .gitignore  README.md  badges.toml  config.py  multiple-tracks.py  pybadges.py  pyproject.toml  requirements.txt
examples/: attendees.csv  speakers.csv
pybadges/: __init__.py  __main__.py  config.py  iterators.py  pybadges.py  timer.py
tests/: pybadges_tests.py
