[tool.poetry]
name = "pybadges"
version = "0.1.0"
description = ""
authors = ["toulibre <contact@toulibre.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pillow = "^10.1.0"
jsonschema = "^4.23.0"
qrcode = "^8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
